fix: update dark mode styles and improve job filter message

--- a/src/index.css
+++ b/src/index.css
@@ -132,7 +132,7 @@
   }
 }
 
-/* .dark {
+.dark {
   background: #161616;
   color: white;
 }
@@ -140,7 +140,7 @@
 .light {
   background: white;
   color: #252525;
-} */
+}
 
 * {
   scroll-behavior: smooth;
